# Adafruit_CircuitPython_uBlox

./: .pre-commit-config.yaml  LICENSE  README.rst  README.rst.license  adafruit_ublox.py  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: ublox_simpletest.py
